# akana

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  _akana_src_bootstrap.py  akana.py  conftest.py  install.cmd  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-computer.txt  requirements-dev.txt  requirements-gemini.txt  requirements-piper.txt  requirements-vector.txt  requirements-voice.txt  requirements-xtts.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
akana_cli/: __init__.py  add_cmd.py  backup_cmd.py  components.py  doctor.py  env_util.py  i18n.py  io.py  main.py  paths.py  reset_memory_cmd.py  runner.py  setup_cmd.py  ship_cmd.py  smoke_cmd.py  start_cmd.py  stop_cmd.py  test_cmd.py  voice_assets.py
akana_server/: __init__.py  audit.py  chat_context.py  chat_injections.py  concurrency.py  config.py  conversation_events.py  conversation_service.py  events.py  json_store.py  llm_context.py  llm_settings.py  main.py  memory_capture.py  memory_core.py  secret_store.py  secure_vault.py  settings_defaults.py  timeutil.py  vault_crypto.py  voice_preferences.py
cursor_bridge/: bridge_daemon.mjs  dispose-polyfill.mjs  lib.mjs  list_models.mjs  package-lock.json  package.json  run_prompt.mjs
docs/: architecture.md  memory.md  providers.md  remote-access.md  voice.md
packs/: PACK_INTERFACE.md
scripts/: akana_cost_bench.py  diagnose_claude_mcp.py  diagnose_mcp.py  mcp_computer.py  mcp_memory.py  mcp_schedule.py  mcp_vault.py
tests/: conftest.py  test_pack_author_conformance.py  test_pack_cli.py  test_pack_contract.py  test_pack_host.py
tools/: gen_pwa_icons.py
web_ui/: index.html  manifest.webmanifest  memory.html  sw.js
(+578 files in other folders)
